<resources>
    <string name="app_name">Duare Mart</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="note_you_will_get_otp_via_notification">Note: you will get OTP via Notification</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
</resources>